@@ -11,7 +11,7 @@
 		'@srcdir@/check_xml_converters',
 		'@srcdir@/check_xmlstream',
 		'@srcdir@/check_jid',
-		'@srcdir@/check_factory_stream',
+		'@srcdir@/check_stream',
 		'@srcdir@/check_factory_legacy_auth',
 		'@srcdir@/check_coverity'
 	],
